[package]
name = "tserver-rs"
version = "0.0.1"
edition = "2021"

[dependencies]
# for networking and async
tokio = { version = "1.38", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# for parsing
winnow = "0.6"

# for converting between enums and numbers
num = "0.4"
num-traits = "0.2"
num-derive = "0.4"
